bk_ida/gobmkida/c3/find_cap2
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/find_cap2/src/engine/reading.c:3607:11: error: use of undeclared identifier 'xmmword_4A5BD0'
( __m128i)xmmword_4A5BD0))) ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/find_cap2/src/engine/reading.c:3622:8: error: use of undeclared identifier 'dword_4A66D0'
return dword_4A66D0[defense]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/find_cap2/src/obj/1/reading.o] Error 1
